switch gitlab path

--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
 			"url" : "https://asset-packagist.org"
 		}
 	],
-	"homepage" : "https://gitlab.com/dicrtarasov/yii2-log",
+	"homepage" : "https://gitlab.com/dicr/yii2-log",
 	"support" : {
-		"source" : "https://gitlab.com/dicrtarasov/yii2-log.git"
+		"source" : "https://gitlab.com/dicr/yii2-log.git"
 	}
 }
