--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name" : "dicr/yii2-log",
-	"description" : "Компоненты журналирования для Yii2",
+	"description" : "Logging components for Yii2",
 	"type" : "yii2-extension",
 	"authors" : [{
 			"name" : "Igor Tarasov",
@@ -11,6 +11,7 @@
 	],
 	"minimum-stability" : "stable",
 	"require" : {
+	    "php" : ">=7.0",
 		"yiisoft/yii2" : "~2.0"
 	},
 	"autoload" : {
