--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
     "name": "dicr/yii2-log",
     "type": "yii2-extension",
-    "description": "Logging components for Yii2",
-    "keywords": [
-        "dicr", "php", "yii2", "log"
-    ],
     "license": "MIT",
+    "description": "Logging components for Yii2",
+    "keywords": ["dicr", "php", "yii2", "log"],
+    "homepage": "https://gitlab.com/dicr/yii2-log",
     "authors": [
         {
             "name": "Igor Tarasov",
@@ -14,6 +13,9 @@
             "role": "developer"
         }
     ],
+    "support": {
+        "source": "https://gitlab.com/dicr/yii2-log.git"
+    },
     "autoload": {
         "psr-4": {
             "dicr\\log\\": "src/"
@@ -21,20 +23,13 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.0",
-        "yiisoft/yii2": "~2.0.32"
+        "php": "~7.2",
+        "yiisoft/yii2": "~2.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master"
     },
     "repositories": [
-        {
-            "type": "composer",
-            "url": "https://asset-packagist.org"
-        }
-    ],
-    "homepage": "https://gitlab.com/dicr/yii2-log",
-    "support": {
-        "source": "https://gitlab.com/dicr/yii2-log.git"
-    }
+        {"type": "composer", "url": "https://asset-packagist.org"}
+    ]
 }
