--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,23 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "~7.2",
-        "yiisoft/yii2": "~2.0"
+        "php": "~7.3",
+        "yiisoft/yii2": "~2.0",
+        "yiisoft/yii2-bootstrap4": "~2.0",
+
+        "dicr/yii2-asset": "~1.7",
+        "dicr/yii2-helper": "~4.0",
+        "dicr/yii2-site": "~5.0",
+        "dicr/yii2-validate": "~2.2"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master"
     },
     "repositories": [
+        {"type": "git", "url": "https://gitlab.com/dicr/yii2-asset.git"},
+        {"type": "git", "url": "https://gitlab.com/dicr/yii2-helper.git"},
+        {"type": "git", "url": "https://gitlab.com/dicr/yii2-site.git"},
+        {"type": "git", "url": "https://gitlab.com/dicr/yii2-validate.git"},
         {"type": "composer", "url": "https://asset-packagist.org"}
     ]
 }
