--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": "~7.3",
+        "ext-mbstring": "*",
+
         "yiisoft/yii2": "~2.0",
         "yiisoft/yii2-bootstrap4": "~2.0",
 
