--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "~7.4",
+        "php": "~7.4 || ~8.0.1",
         "ext-mbstring": "*",
 
         "yiisoft/yii2": "~2.0",
