--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,12 @@
         "yiisoft/yii2-bootstrap4": "~2.0",
 
         "dicr/yii2-asset": "~1.7",
-        "dicr/yii2-helper": "~4.0",
-        "dicr/yii2-site": "~6.2",
+        "dicr/yii2-helper": "~4.5",
+        "dicr/yii2-site": "~7.0",
         "dicr/yii2-validate": "~2.3"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-latest"
     },
     "repositories": [
         {"type": "composer", "url": "https://asset-packagist.org"},
